# debatabots

./: .gitignore  README.md  cli.py  debate_fp.py  debate_oop.py  functional_vs_philospher_2023_06_02_b.txt  functional_vs_philospher_2023_06_02_c.txt  functional_vs_philospher_2023_06_02_d.txt  functional_vs_philospher_2023_06_02_e.txt  functional_vs_philospher_2023_06_02_f.txt  functional_vs_philospher_2023_06_11.txt  functional_vs_philospher_2023_06_12_b.txt  functional_vs_philospher_2023_06_12_d.txt  functional_vs_philospher_2023_06_12_e.txt  oop_vs_philospher_2023_06_12_a.txt  pyproject.toml  react.py  test_debate_fp.py  test_debate_oop.py
debates/: functional_vs_philospher_2023_05_31_a.txt  functional_vs_philospher_2023_06_02_a.txt  functional_vs_philospher_2023_06_12_a.txt  functional_vs_philospher_2023_06_12_c.txt
lib/: chat.py  markdown_splitter.py
test/lib/: example_doc.md
tests/lib/: test_markdown_splitter.py
