[tool.poetry]
name = "gpt-playground"
version = "0.1.0"
description = ""
authors = ["Ronie Uliana <ronie.uliana@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.7"
tiktoken = "^0.4.0"
chromadb = "^0.3.25"
toolz = "^0.12.0"
requests = "^2.31.0"
html2text = "^2020.1.16"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.311"
black = "^23.3.0"
pyflakes = "^3.0.1"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
